# purrsock

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  build.bat
docs/: _m_a_i_n_p_a_g_e_8md.html  _t_o_d_o_8md.html  annotated.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_c183064df1291357db1d38c637c6e87c.html  dir_d1b47196654b7b87535dc9e3bdd5ffb7.html  dir_d1b47196654b7b87535dc9e3bdd5ffb7.js  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  index.js  internal_8h.html  internal_8h.js  md_docs_2md_2_t_o_d_o.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  purrsock_8c.html  purrsock_8c.js  purrsock_8c_source.html  purrsock_8h.html  purrsock_8h.js  purrsock_8h_source.html  struct__purrsock__socket__t.html  struct__purrsock__socket__t.js  structps__packet__t.html  windows_8c_source.html
docs/html/: annotated_dup.js  dir_365f891cfc74b75fe0ccf817be21594d.html  dir_d1b47196654b7b87535dc9e3bdd5ffb7_dep.dot  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.css  files.html  globals_type.html  internal_8h_source.html  main_8c.html  struct__purrsock__socket__t-members.html  structps__packet__t.js  windows_8c.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_5.js  all_7.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
docs/md/: MAINPAGE.md  TODO.md
examples/: CMakeLists.txt
examples/http/: CMakeLists.txt  main.c
examples/purrr/: CMakeLists.txt  client.c  common.h  fragment.hlsl  server.c  vertex.hlsl
include/purrsock/: purrsock.h
purrsock/: CMakeLists.txt
purrsock/include/purrsock/: purrsock.h
purrsock/src/: linux.c  purrsock.c  windows.c
src/: internal.h  purrsock.c  windows.c
test/: CMakeLists.txt  test_linux_purrsock.c  test_windows_purrsock.c
test/examples/: CMakeLists.txt
test/examples/http/: main.c
tools/: mv.bat
